add image in categoryapp

--- a/Templates/CategoryApp/index.html
+++ b/Templates/CategoryApp/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static%}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,5 +8,7 @@
 </head>
 <body>
   List of Category <br> <a href='breakfast/''>Breakfast</a> <br> <a href='lunch/''>Lunch</a> <br> <a href='dinner/''>Dinner</a> <br> <a href='dining/''>Home</a>
+  <br>
+  <img src = "{% static "Images/img_category.jpg" %}">
 </body>
 </html>
