--- a/Templates/CategoryApp/index.html
+++ b/Templates/CategoryApp/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="{% static "CSS/style.css" %}">
   <title>Category App Index</title>
 </head>
 <body>
-  List of Category <br> <a href='breakfast/''>Breakfast</a> <br> <a href='lunch/''>Lunch</a> <br> <a href='dinner/''>Dinner</a> <br> <a href='dining/''>Home</a>
+ <h1> List of Category </h1> <br> <a href='breakfast/''>Breakfast</a> <br> <a href='lunch/''>Lunch</a> <br> <a href='dinner/''>Dinner</a> <br> <a href='dining/''>Home</a>
   <br>
   <img src = "{% static "Images/img_category.jpg" %}">
 </body>
