--- a/Templates/CategoryApp/index.html
+++ b/Templates/CategoryApp/index.html
@@ -8,8 +8,7 @@
   <title>Category App Index</title>
 </head>
 <body>
- <h1> List of Category </h1> <br> <a href='breakfast/''>Breakfast</a> <br> <a href='lunch/''>Lunch</a> <br> <a href='dinner/''>Dinner</a> <br> <a href='dining/''>Home</a>
-  <br>
+ <h1> List of Category </h1> <br> <a href='breakfast/'>Breakfast</a> <br> <a href='lunch/'>Lunch</a> <br> <a href='dinner/'>Dinner</a> <br> <a href='dining/'>Home</a>
   <table border ="1">
     <tr>
     <th>Name</th>
@@ -23,8 +22,7 @@
     </tr>
     {% endfor %}
   </table>
-
-
-  <img src = "{% static "Images/img_category.jpg" %}">
+ <img src = "{% static "Images/img_category.jpg" %}"> <br>
+<a href= 'form/'>Reservation form </a>
 </body>
 </html>
