--- a/Templates/DiningApp/index.html
+++ b/Templates/DiningApp/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   HomePage from Dining App <br>
-  <a href='/DiningApp/category/''> Category </a> <br> <a href='/DiningApp/contact/''>contact </a> <br> <a href='about/''>about </a> <br>
+  <a href='/DiningApp/category/'> Category </a> <br> <a href='/DiningApp/contact/'>contact </a> <br> <a href='about/'>about </a> <br> <a href = 'form/'>Reservation form</a> <br>
   {{ text_1 }}
 </body>
 </html>
